Постарался учесть замечания ревьювера. Простые вопросы закрыл. С добавлением эпика как подзадачи получилось не очень. Из класса Epic убрал implements, но без него добавление заставить работать не смог, пришлось (временно) отключить. Попробовал это реализовать через дополнительный класс. В нём корректно добавлять получилось, но возникли вопросы к структуре данных, поэтому в основной код данная разработка пока не попала.